--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/backend.css": "/css/backend.css",
-    "/css/frontend.css": "/css/frontend.css"
+    "/css/frontend.css": "/css/frontend.css",
+    "/css/common.css": "/css/common.css"
 }
